content updates for release 1.1

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -98,27 +98,35 @@
 			<%= semantic_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 			  <%= devise_error_messages! %>
 				<% f.inputs do %>
-					<%= f.input :first_name, :input_html => {:size => '15'} %>
-					<%= f.input :last_name, :input_html => {:size => '15'} %>
-					<%= f.input :email,:as => :email, :input_html => {:size => '30'} %>
-					<%= f.input :password, :as => :password, :input_html => {:size => '15'} %> 
-					<%= f.input :password_confirmation,:as => :password, :input_html => {:size => '15'} %>
-					<%= f.input :role, :as => :hidden, :input_html => { :value => "patient" } %>
-				<!--
-					<#= f.input :role, :as => :radio, :label => "Are you a:", :collection => [["Patient/Caregiver", "patient"], ["Clinician", "clinician"], ["Clinic Administrator", "administrator"]] #>
-
-					<p class="ifoption">If Patient or Non-Clinician Caregiver:</p>
-				-->
-					<%= f.input :address, :input_html => {:size => '30'}  %>
-					<%= f.input :address2, :input_html => {:size => '30'}  %>
-					<%= f.input :city, :input_html => {:size => '30'}  %>
-					<%= f.input :state, :input_html => {:size => '5'}  %>
-					<%= f.input :zip, :input_html => {:size => '5'}  %>
-					<%= f.input :phone, :as => :phone, :input_html => {:size => '30'}  %>
-				<!--	
-					<p class="ifoption ifoption2 label">If Clinician, or Clinic Administrator:</p> 
-					<#= f.input :clinic, :collection => Clinic.order("name ASC").all #>
-				-->
+					<%= if current_user.web_site_administrator? == false %>
+						<%= f.input :first_name, :input_html => {:size => '15'} %>
+						<%= f.input :last_name, :input_html => {:size => '15'} %>
+						<%= f.input :email,:as => :email, :input_html => {:size => '30'} %>
+						<%= f.input :password, :as => :password, :input_html => {:size => '15'} %> 
+						<%= f.input :password_confirmation,:as => :password, :input_html => {:size => '15'} %>
+						<%= f.input :role, :as => :hidden, :input_html => { :value => "patient" } %>
+						<!-- maybe wait until checkout, so doesn't have to enter this twice
+						<#= f.input :address, :input_html => {:size => '30'}  %>
+						<#= f.input :address2, :input_html => {:size => '30'}  %>
+						<#= f.input :city, :input_html => {:size => '30'}  %>
+						<#= f.input :state, :input_html => {:size => '5'}  %>
+						<#= f.input :zip, :input_html => {:size => '5'}  %>
+						<#= f.input :phone, :as => :phone, :input_html => {:size => '30'}  %>
+						-->
+					<% end %>
+					<%= if current_user.web_site_administrator? %>
+						<!-- predefine values for first name, last name, email from active admin Clinic record -->
+						<%= f.input :first_name, :input_html => {:size => '15'} %>
+						<%= f.input :last_name, :input_html => {:size => '15'} %>
+						<%= f.input :email,:as => :email, :input_html => {:size => '30'} %>
+						<%= f.input :password, :as => :password, :input_html => {:size => '15'} %> 
+						<%= f.input :password_confirmation,:as => :password, :input_html => {:size => '15'} %>
+						<%= f.input :role, :as => :hidden, :input_html => { :value => "administrator" } %>
+						<!-- predefine values for first name, last name, email from active admin Clinic record --> 
+						<%= f.input :phone, :label => 'Cell Phone', :as => :phone, :input_html => {:size => '30'}  %>
+						<!-- pass in/ pickup: already available if creating a clinic -->
+						<%= f.input :clinic, :collection => Clinic.order("name ASC").all #>
+					% end %>
 				<% end %>
 				<%= f.actions do %>
 					<%= f.action :submit, :label => 'Register', :button_html => { :class => 'registerButton'} %>
