--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,10 +41,11 @@ Known Bugs:
 						slideTransitionSpeed:800,
 						controlNavEnabled:true,
 						slideSpacing:0,
-						slideshowDelay:20000,
+						slideshowDelay:3000,
 						slideshowPauseOnHover: false  
 								
 		    });
+			$("#callTollFree").hide();
 				
 		});
 	</script>	
