--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -383,10 +383,12 @@
 						<% end %>
 					</ul>
 				</div>
-						<!--
-						<li><a href="https://checkout.netsuite.com/s.nl?c=1114349&sc=6&login=T&reset=T&newcust=T&noopt=T">register</a></li>
-						<li><a href="https://checkout.netsuite.com/s.nl/c.1114349/sc.6/.f?login=T&reset=T">login</a></li>
-						-->
+				
+				<!-- call, toll free  ———————————————————————————————————————————————————— -->
+				<div id="callTollFree">
+					<p>Call us, toll free, at <strong>877-882-7844</strong>.</p>
+				</div>
+						
 			</div> <!-- end of div 'header' -->
 			
 			<div id="middleBand">
