--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -180,6 +180,9 @@
 									<%= if @product.method_of_shipment == 'LTL' || @product.method_of_shipment == 'VAN LINE' then image_tag("utility/truck_46x24.gif",:class => "withToolTip", :title => "shipped by truck") end %>
 									<%= if @product.assembly_p == 1 then image_tag("utility/wrench_24x24.gif",:class=>"withToolTip",:title => "some assembly required") end %>
 									<%= if @product.latex_p == 1 then image_tag("utility/latex_free_49x49.gif") end %>
+							
+									<%= if @product.clinician_only_p == 1 then content_tag(:p,"These products are available only to clinicians. Please contact us for a referral to someone in your area: 423-910-0121 or toll-free: 877-882-7844") end %>
+
 								</td>
 								<td></td>
 							</tr>
