--- a/app/views/base_products/show.html.erb
+++ b/app/views/base_products/show.html.erb
@@ -153,6 +153,9 @@
 							<%= if @base_product.assembly_p == 1 then image_tag("utility/wrench_24x24.gif",:class=>"withToolTip",:title => "some assembly required") end %>
 							<%= if @base_product.latex_p == 1 then image_tag("utility/latex_free_49x49.gif") end %>
 					</div>
+					<div id="clinician_only_warning">
+						<%= if @base_product.clinician_only_p == 1 then content_tag(:p, "These products are available only to clinicians. Please contact us for a referral to someone in your area:- 423-910-0121 or toll-free: 877-882-7844") end %>
+					</div>
 					
 				</div> 
 
