--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -203,6 +203,9 @@
 							<%= if @product_type.assembly_p == 1 then image_tag("utility/wrench_24x24.gif",:class=>"withToolTip",:title => "some assembly required") end %>
 							<%= if @product_type.latex_p == 1 then image_tag("utility/latex_free_49x49.gif") end %>
 					</div>
+					<div id="clinician_only_warning">
+						<%= if @product_type.clinician_only_p == 1 then content_tag(:p, "These products are available only to clinicians. Please contact us for a referral to someone in your area:- 423-910-0121 or toll-free: 877-882-7844") end %>
+					</div>
 
 					
 				</div> 
