--- a/public/stylesheets/trumedical_base.css
+++ b/public/stylesheets/trumedical_base.css
@@ -43,7 +43,8 @@
 			top:0px;
 			left:0px;
 			z-index: 11; /* above scrolling images on home page in div#banner_rotator */
-			background-color:orange; /* puts little orange bar below menu */
+			background-color:white; /* puts little orange bar below menu: looked orphaned when we added the google search 
+			 	to the home page also */
 			}
 		#center_column {
 			width: 800px; /* 1060-235-20 */
@@ -129,13 +130,21 @@
 		div#cart_links a { font-size:12px!important; }
 
 		
-	#cart_links {  
-		position:relative;
-		margin-top:10px; margin-right:20px;
-		z-index:99;	/* above images scrolling in  */
+		#cart_links {  
+			position:relative;
+			margin-top:10px; margin-right:20px;
+			z-index:99;	/* above images scrolling in  */
+			}
+		#callTollFree {
+			position: absolute; /* within ???? on all pages  */
+			top:50px; /* just above line above logo */
+			left:822px; /* 760 to line up with logomark below it; 825 to line up with T of Tru-Medical in logomark; 760 looks better but some breadcrumbs overrun it */
+			height:20px;
+			width:380px;
+			z-index: 99;
+			color:#0094DE;font-size:12px;
 		}
-
-		
+	
 
 
 /* ———— generic styles (may be overridden later in this file)  ———— */
@@ -415,3 +424,9 @@
 	#tabs_buttons_gamme {
 		margin-top: 28px;
 	}
+	
+/* ———— Product[_type/_set/baseProduct/] view pages —————————————— */
+
+div#clinician_only_warning  p { color:red; font-style:italic; padding-right:40px
+.clinician_only_paragraph { color:black; font-style:italic; }
+
