add Questions? ... to header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -386,7 +386,7 @@
 				
 				<!-- call, toll free  ———————————————————————————————————————————————————— -->
 				<div id="callTollFree">
-					<p>Call us, toll free, at <strong>877-882-7844</strong>.</p>
+					<p>Questions? Call us, toll free, at <strong>877-882-7844</strong>&nbsp;</p>
 				</div>
 						
 			</div> <!-- end of div 'header' -->
