--- a/app/views/clinics/edit.html.erb
+++ b/app/views/clinics/edit.html.erb
@@ -14,13 +14,13 @@
 	<style type="text/css">
 		
 		div#center_column { }
-	  	div#clinic_content h2 { 
+	  div#clinic_content h2 { 
 			background-color: orange;
 			color:white;
 			padding: 5px 10px 10px 10px;
 			width: 155px;
 		}
-		hr { 
+	hr { 
 			width:94%;
 			float:left;
 			margin-top:-11px;
@@ -30,39 +30,19 @@
 		div#clinic_content h3 {margin-top:20px;}
 		div#clinic_content form { margin-bottom:20px; } 
 		div#clinic_content a { color:orange; }
-		div#clinic_content input {margin-bottom:0px; }
+		div#clinic_content input {margin-bottom:0px; width:150px;}
 		div#clinic_content label {text-align:right; padding:0px 10px 8px 0px; width: 165px; }
 		div#clinic_content p.inline-hints { font-style:italic; color:red; padding-left:10px;padding-top:0px; font-size:10px; margin-top:0px;}
 		div#clinic_content input#clinic_submit { margin-left:10px; width: 90px;}
 		div#clinic_content input#clinician_submit { margin-left:10px; width:110px;}
 		div#clinicians_table { margin-left:20px; }
 		div#clinicians_table table th.actions, div#clinicians_table td.actions { color:black; padding-left:20px;}
-		form.formtastic fieldset.buttons {margin-left:-36px!important;} /* overrides formtastic 25%. */
-		form.formtastic fieldset.buttons ol {margin-left:0px; padding-left:0px;}
-		form.formtastic fieldset.buttons ol li {margin-left:0px; padding-left:0px;}
-		input#clinic_submit { margin-left:0px; padding-left: 0px; color:orange; width:120px;}
-		/*
+		fieldset.buttons {margin-left:-36px!important;} /* overrides formtastic 25%. */
+		fieldset.buttons ol {margin-left:0px; padding-left:0px;}
+		fieldset.buttons ol li {margin-left:0px; padding-left:0px;}
+		input#clinic_submit { margin-left:0px; padding-left: 0px; color:orange;}
 		form.button_to { max-width:40px; display: inline-block; }
-		*/
 		div#disclaimer { margin-top:40px; font-style:italic; color:orange;}
-		form.formtastic fieldset > ol > li {
-		    margin-bottom: 0;
-		    margin-top: -0.5em;
-		    padding: 0.5em 0;
-		}
-		/* this style also used by button linking to Netsuite myAccount for clinic */
-		.newClinician { line-height:18px; border-radius:3px;}
-		.newClinician a { font-size:11px;color:white!important; }
-		.tabText { font-weight:bold; color:black!important;}
-		div#newClinicianButton {
-			margin-top:10px; margin-bottom:20px;
-			background-color:orange;
-			border-color:orange;
-		}
-		div#newClinicianButton a {
-			color:white;
-			font-weight:bold
-		}
 	</style>
 
 	<script type ="text/javascript">
@@ -74,7 +54,6 @@
 			$("a.mylinks").hover(function(){
 				$(this).css("color","blue");
 			});
-			$("#newClinicianButton").button();
 
 		});
 
@@ -106,17 +85,13 @@
 		<div id="clinic_content">
 				<!-- this implementation of tabs is based on jquery-ui -->
 				<div id="tabs" style="overflow:hidden;">	<!-- fixes a jQuery-ui problem when tabs is in right column with something in column to its left ( in this case the menu) -->
-				<ul>
-					
-					<li><a href="#tabs-1" class="tabText">Clinicians</a></li>
-					<li><a href="#tabs-2" class="tabText">Clinic</a></li>
-					<li><a href="#tabs-3" class="tabText">Shipping</a></li>
-					<li><a href="#tabs-4" class="tabText">Billing</a></li>
-					<!-- <li><a href="#tabs-5">Purchase Limits</a></li> -->
+				<ul>					
+					<li><a href="#tabs-1">Clinicians</a></li>
+					<li><a href="#tabs-2">Clinic</a></li>
+					<li><a href="#tabs-3">Shipping</a></li>
+					<li><a href="#tabs-4">Billing</a></li>
+					<li><a href="#tabs-5">Purchase Limits</a></li>
 				</ul>
-				
-				
-				
 				
 				<!-- Clinicians ————————————————————————— -->
 				<div id="tabs-1">
@@ -126,7 +101,7 @@
 							<th>First Name</th>
 							<th>Last Name</th>
 							<th align="left">Email</th>
-							<!-- <th>Password</th> -->
+							<th>Password</th>
 							<th class="actions" align="left">Action</th>
 
 							<% @clinic.clinicians.each do | clinician | %>
@@ -134,86 +109,70 @@
 									<td><%= clinician.first_name %></td>
 									<td><%= clinician.last_name %></td>
 									<td><%= clinician.email %></td>
-									<!-- <td><#= clinician.password %></td> -->
-									<td class="actions"><%= link_to("Edit", edit_clinician_path(clinician),:class=>"mylinks") %>&nbsp;|&nbsp;<%= link_to("Delete", clinician, :confirm => "Are you sure?",:method => "delete",:class=>"mylinks") %></td>	
+									<td><%= clinician.password %></td>
+									<td class="actions"><%= link_to("Edit", edit_clinician_path(clinician.id),:class=>"mylinks") %>&nbsp;|&nbsp;<%= link_to("Delete", clinician, :confirm => "Are you sure?",:method => "delete",:class=>"mylinks") %></td>	
 								</tr>
 							<% end %>
 						</table>
-						<div id="newClinicianButton">
-							<%= link_to("New Clinician", new_clinician_path()) %>
-						</div>
-						<p></p>
-						<p></p>
-						<p></p>
-						<div id="disclaimer">
-							<p>(*) Please note that we are using the term 'clinic' in a generic sense.  As used here it refers to</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; clinics, practices, managed health care facilities, hospital units, sports medicine facilities, gyms/spas, ... </p> 
-						</div>
+						
+						<button style="line-height:15px; font-size:11px;"><%= link_to("New Clinician", new_clinician_path()) %></button>
 					</div>
-
+					<div id="disclaimer">
+						<p>(*) Please note that we are using the term 'clinic' in a generic sense.</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As used here it refers to clinics, practices, managed health care facilities, hospital units, gyms/spas, ... </p> 
+					</div>
 				</div>
-				
 				<!-- Basic Clinic Data  ————————————————————————— -->
 				<div id="tabs-2">
-						<h3>Basic Information on the Clinic ( Practice/Hospital/Facility/...) </h3>
+						<h3>Basic Information on the Clinic ( Practice/Hospital/Facility/...) itself</h3>
 						<% semantic_form_for @clinic do |f| %>
 							<% f.inputs do %>
-								<%= f.input :name, :input_html => {:size => '40'} %>
-							<!--
+								<%= f.input :name %>
+								<!--
 								<#= f.input :id, :hint => "for testing" %>
 								<#= f.input :tm_customer_id, :label => "Customer Id", :hint => "for testing" %>
 								<#= f.input :netsuite_customer_id, :label => "Netsuite Customer id", :hint => "for testing" %>
 								type of clinic: oneof Clinic, Hospital Unit, Managed Care Facility, Chiropractic Practice, Physician, ...  
 								owner: name, [contact info]
+								administrator: 
+									name
+									contact information: office phone, extension, mobile phone, email
 								Tru-Medical account rep: name, [phone], [email] 
 							-->
-								<%= f.input :address, :input_html => {:size => '40'} %>
-								<%= f.input :address2, :input_html => {:size => '40'} %>
-								<%= f.input :city, :input_html => {:size => '40'} %>
-								<%= f.input :state, :input_html => {:size => '5'} %>
-								<%= f.input :zip, :input_html => {:size => '15'} %>
-								<%= f.input :office_phone, :label => "Main Office Phone", :input_html => {:size => '15'} %>
-								<%= f.input :fax, :label => "Fax", :input_html => {:size => '15'} %>
-								<%= f.input :primary_contact, :label => "Administrator", :input_html => {:size => '40'} %>
-								<%= f.input :phone, :label => "phone", :input_html => {:size => '15'} %>
-								<%= f.input :extension, :label => "extension (if any)", :input_html => {:size => '5'} %>
-								<%= f.input :email, :label => "email", :input_html => {:size => "40"} %>
-								
+								<%= f.input :address %>
+								<%= f.input :city %>
+								<%= f.input :state %>
+								<%= f.input :zip %>
+								<%= f.input :phone %>
+								<%= f.input :extension, :label => "Extension" %>
 								<!-- 
-								<#= f.input :alternate_contact %>
-								-->								
+									clinic administrator
+									her work phone/[extenion]
+									her mobile phone
+									her email address
+								-->			
 							<% end %>
-							<p>&nbsp;</p>
 							<%= f.buttons %>
 						<% end %>
 						
-						<!-- commented out until can register/login with Netsuite
-						<div>
-							<span class="size">Purchase History Information:</span>
-								<button class="newClinician"><a target="_blank" href="https://checkout.netsuite.com/app/center/nlvisitor.nl/c.1114349/sc.6/n.1/.f" style="color:white;">Click Here</a></button>
-						</div>
-						-->
-					 
-						<div id="disclaimer">
-							<p>(*) Please note that we are using the term 'clinic' in a generic sense.  As used here it refers to</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; clinics, practices, managed health care facilities, hospital units, sports medicine facilities, gyms/spas, ... </p> 
-						</div>
-				</div> <!-- end of div tabs-2 -->
+						<span class="size">Purchase History Information: </span><a target="_blank" href="#">Click Here</a> 
 				
+				</div> <!-- end of div tabs-1 -->
+
 				<!-- Shipping  ———————————————————— -->
 				<div id="tabs-3">
 					<h3>Ship-To Address</h3>
 					<% semantic_form_for @clinic do |f| %>
 						<% f.inputs do %>
-							<%= f.input :name, :input_html => {:size => '40'} %>
-							<%= f.input :address, :input_html => {:size => '40'} %>
-							<%= f.input :city, :input_html => {:size => '40'} %>
-							<%= f.input :state, :input_html => {:size => '5'} %>
-							<%= f.input :zip, :input_html => {:size => '15'} %>	
+							<%= f.input :name %>
+							<%= f.input :address %>
+							<%= f.input :city %>
+							<%= f.input :state %>
+							<%= f.input :zip %>	
 						<% end %>
-						<p>&nbsp;</p>
 						<%= f.buttons %>
 					<% end %>
 					<h3>Default Shipping Method</h3>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;UPS ground</p>
+					<p>[UPS ground]</p>
 				</div>
 
 				<!-- Billing——————————————————————————— -->
@@ -221,24 +180,22 @@
 					<h3>Bill-To Address</h3>
 					<% semantic_form_for @clinic do |f| %>
 						<% f.inputs do %>
-							<%= f.input :name, :input_html => {:size => '40'} %>
-							<%= f.input :address, :input_html => {:size => '40'} %>
-							<%= f.input :city, :input_html => {:size => '40'} %>
-							<%= f.input :state, :input_html => {:size => '5'} %>
-							<%= f.input :zip, :input_html => {:size => '15'} %>
+							<%= f.input :name %>
+							<%= f.input :address %>
+							<%= f.input :city %>
+							<%= f.input :state %>
+							<%= f.input :zip %>
 							<!-- Billing contact: name -->
-							<%= f.input :phone, :label=>"billing contact phone", :input_html => {:size => '15'} %>
-							<%= f.input :extension, :label => "extension (if any)", :input_html => {:size => '5'} %>			
+							<%= f.input :phone, :label=>"billing contact phone" %>
+							<%= f.input :extension, :label => "extension (if any)" %>			
 						<% end %>
-						<p>&nbsp;</p>
 						<%= f.buttons %>
 					<% end %>
 					<h3>Default Billing Method</h3>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;Invoice Net-30</p>
+					<p>Invoice Net-30</p>
 				</div>
 				
 				<!-- Purchase Authorization ————————————————————————— -->
-				<!--
 				<div id="tabs-5">
 					<h3>Purchase Limits</h3>
 					<table cellspacing="10">
@@ -260,7 +217,6 @@
 						</tr>
 					</table>				
 				</div>
-				-->
 				
 			</div><!-- end of div#tabs -->
 				
