--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,39 +47,61 @@
 
 					<h2>Edit <%= resource_name.to_s.humanize %></h2>
 					<hr></hr></br>
+						<%= semantic_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+						  	<%= devise_error_messages! %>
+							<% f.inputs do %>
+								<!-- Do we need the same distinction between what fields get shown for clinic-adminstrators, clinicians, and patients as in registrations/new.html.erb? I think only clinicians versus patients: the patients show address info, the clinicians don't; neither should show the 'type' field, since we don't want the user to be able to modify that; maybe show it as 'read-only' for debugging.  There is a separate way for clinic-administrators to edit information on the clinic; and they can't edit their own record. Should we let them change their password?  --> 
+								<% if current_admin_user %>
 
-					<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-					
-					  <%= devise_error_messages! %>
-					
-					  <div><%= f.label :first_name %><br />
-					  <%= f.text_field :first_name %></div>
-					
-						<div><%= f.label :last_name %><br />
-					  <%= f.text_field :last_name %></div>
+									<%= f.input :first_name, :input_html => {:size => '15'} %>
+									<%= f.input :last_name, :input_html => {:size => '15'} %>
+									<%= f.input :email,:as => :email, :input_html => {:size => '30'} %> <!-- can he change his email address without screwing us up? -->
+									<%= f.input :password, :as => :password, :input_html => {:size => '15'}, :hint => "(Leave blank if you don't want to change it.)" %> 
+									<%= f.input :password_confirmation,:as => :password, :input_html => {:size => '15'} %>
+									<%= f.input :current_password,:as => :password, :input_html => {:size => '15'}, :hint => "(We need your current password to confirm your changes)" %>
+									
+									<%= f.input :type, :input_html => { :readonly => true } %>
+									<%= f.input :phone, :label => 'Cell Phone', :as => :phone, :input_html => {:size => '30'}  %>
+									
+								<% elsif current_user.type == "Administrator" %>									
+									<%= f.input :first_name, :input_html => {:size => '15'} %>
+									<%= f.input :last_name, :input_html => {:size => '15'} %>
+									<%= f.input :email,:as => :email, :input_html => {:size => '30'} %>
+									<%= f.input :password, :as => :password, :input_html => {:size => '15'}, :hint => "(Leave blank if you don't want to change it.)"  %> 
+									<%= f.input :password_confirmation,:as => :password, :input_html => {:size => '15'} %>
+									<%= f.input :current_password,:as => :password, :input_html => {:size => '15'}, :hint => "(We need your current password to confirm your changes)" %>
+									<%= f.input :type,:input_html => { :readonly => true }  %>
+									<%= f.input :clinic,:input_html => { :readonly => true }  %>
+									<!-- no address information necessary for clinicians; ship-to and bill-to use the clinic's address -->
+									
+								<% else %> <!-- patient/caregiver --> 
+									<%= f.input :first_name, :input_html => {:size => '15'} %>
+									<%= f.input :last_name, :input_html => {:size => '15'} %>
+									<%= f.input :email,:as => :email, :input_html => {:size => '30'} %>
+									<%= f.input :password, :as => :password, :input_html => {:size => '15'}, :hint => "(Leave blank if you don't want to change it.)"  %> 
+									<%= f.input :password_confirmation,:as => :password, :input_html => {:size => '15'} %>
+									<%= f.input :current_password,:as => :password, :input_html => {:size => '15'}, :hint => "(We need your current password to confirm your changes)" %>								
+									<%= f.input :type, :input_html => { :readonly => true, :size => '15' } %>
+									<!-- Should give a patient/caregiver the ability to edit billing/shipping[/cc] info here and pass it back to Netsuite
+									<#= f.input :address, :input_html => {:size => '30'}  %>
+									<#= f.input :address2, :input_html => {:size => '30'}  %>
+									<#= f.input :city, :input_html => {:size => '30'}  %>
+									<#= f.input :state, :input_html => {:size => '5'}  %>
+									<#= f.input :zip, :input_html => {:size => '5'}  %>
+									<#= f.input :phone, :as => :phone, :input_html => {:size => '30'}  %>
+									-->
+								<% end %>
+							<% end %> <!-- end of inputs -->
 
-					  <div><%= f.label :email %><br />
-					  <%= f.email_field :email %></div>
+							<%= f.actions do %>
+								<%= f.action :submit, :label => 'Update', :button_html => { :class => 'registerButton'} %>
+							<% end %>
+						<% end %> <!-- end of semantic_form_for -->
 
-					  <div><%= f.label :password %> <i>(Leave blank if you don't want to change it.)</i><br />
-					  	<%= f.password_field :password %></div>
-
-					  <div><%= f.label :password_confirmation %><br />
-					  	<%= f.password_field :password_confirmation %></div>
-
-					  <div><%= f.label :current_password %> <i><span style="color:orange;">(We need your current password to confirm your changes.)</span></i><br />
-					  	<%= f.password_field :current_password %></div>
-				
-					  <div><%= f.submit "Update" %></div>
-						<i><span style="color:orange;">(Remember: You need to enter your current password above to confirm your changes.)</span></i>
-
-					<% end %>
-					<!--
-					<p>Unhappy?<#= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
-				-->
+					<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
 					<%= link_to "Back", :back %>
 					
 				</div> <!-- end div#devise_generated_content -->
 			</div> <!-- end div#center_column -->
 
-<% end %>
+		<% end %> <!-- end content_for :middleBand -->
