--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -229,7 +229,7 @@
 								<td><%= p.web_description %></td>
 								<td class="price" id="price_<%= p.netsuite_item_no %>">
 									<%= if user_signed_in? then
-										if current_user.role == "clinician" or current_user.role == "administrator"
+										if current_user.type == "Clinician" or current_user.role == "Administrator"
 								  		case current_user.clinic.price_schedule
 												when "tru-blu"
 													number_to_currency(p.price_tru_blue)
