--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -192,7 +192,7 @@
 									<%= 
 								
 									if user_signed_in? then
-										if current_user.role == "clinician" or current_user.role == "administrator"
+										if current_user.type == "Clinician" or current_user.role == "Administrator"
 								  		case current_user.clinic.price_schedule
 												when "tru-blu"
 													number_to_currency(@product.price_tru_blue)
