--- a/public/stylesheets/formtastic.css
+++ b/public/stylesheets/formtastic.css
@@ -115,7 +115,8 @@ form.formtastic fieldset > ol > li.boolean label input { margin:0 0.5em 0 0.2em;
 form.formtastic fieldset > ol > li.radio { }
 form.formtastic fieldset > ol > li.radio fieldset { overflow:visible; }
 form.formtastic fieldset > ol > li.radio fieldset ol { margin-bottom:-0.5em; }
-form.formtastic fieldset > ol > li.radio fieldset ol li { margin:0.1em 0 0.5em 0; overflow:visible; }
+form.formtastic fieldset > ol > li.radio fieldset ol li { margin:0.1em 0.5em 0.5em 0; display:inline-block; } /* changed from overflow:visible to place all radio buttons on a single line */
+
 form.formtastic fieldset > ol > li.radio fieldset ol li label { float:none; width:100%; }
 form.formtastic fieldset > ol > li.radio fieldset ol li label input { margin-right:0.2em; }
 
