updated products table; fixed latex free; company typos

--- a/app/views/home/_popups_home.html.erb
+++ b/app/views/home/_popups_home.html.erb
@@ -70,9 +70,8 @@
 		<p>We are owned and managed by 6 partners who are each actively involved in the daily operations of the business. Leadership experience ranges from former executives and managers of medical product manufacturers and distributors to executives and managers of insurance, transportation and food companies.</p>
 		<p>Founded in November 2009 and located in Collegedale Tennessee, TMS currently operates out of 21,000 square feet of offices and warehouse space with expansion capabilities existing through lease arrangements with adjoining tenants.</p> 
 		<p>Sales and marketing activities are divided into two categories, clinic and patient. Clinic sales are generated direct to clinics by TMS direct sales employees and contracted sales associates. Additionally, direct sales to clinics are accomplished through catalog marketing and our 21st century web ordering vehicle. Indirect clinical sales are achieved through dealers/re-sellers strategically located throughout the U.S.</p>
-		<p>Patient sales are generated on a referral basis by clinics both on a prescription and non-prescription basis. TMS is an accredited Medicare and Medicaid provider and currently accepts assignments from Medicare and Medicaid programs on certain items in TN, GA and KY. Additionally, TMS maintains contacted in network reimbursement status with many commercial payers in TN, GA & KY.</p>
-		<p>Our management team believes there is an excellent opportunity for sustainable multi-year growth due to recent consolidations and our multi channeled go to market strategy.  We believe that many of the products we offer provide cost effective approaches to treating many conditions and that there will be a solid demand as the health care industry reforms. </p>
-
+		<p>Patient sales are generated on a referral basis by clinics both on a prescription and non-prescription basis. TMS is an accredited Medicare and Medicaid provider and currently accepts assignments from Medicare and Medicaid programs on certain items in TN, GA, AL and KY. Additionally, TMS maintains contracts in network reimbursement status with many commercial payers in TN, GA, AL and KY.</p>
+		<p>Our management team believes there is an excellent opportunity for sustainable multi-year growth due to recent consolidations and our multi channeled go to market strategy.  We believe that many of the products we offer provide cost effective approaches to treating many conditions and that there will be a solid demand as the health care industry reforms. </p>a
 	</div>
 
 	<!-- Patients popup ————————————————————————————————————————————————— -->
@@ -106,7 +105,7 @@
 			<p>We offer <span class="bold">ten different categories of products</span> to meet all of your clinic needs.</p>
 			<p><span class="bold">Our website</span> offers many great <span class="bold">tools for the clinician.</span></p>
 			<ul>
-				<li>View an On-Line Catelog of Products — some available only through Clinicians</li>
+				<li>View an On-Line Catalog of Products — some available only through Clinicians</li>
 				<li>Request a Quote</li>
 				<li>Place and Track orders</li>
 				<!-- <li>Print a Statement</li> -->
@@ -117,7 +116,7 @@
 				<li>Part Number Cross Reference Tool</li>
 				<!-- <li>Write a Product Review</li> -->
 				<li>View Promotions</li>
-				<li>Link to TruMedical Solutions on Twitter & Facebook</li>
+				<li>Link to TruMedical Solutions on Twitter and Facebook</li>
 			</ul>
 			<p>We look forward and are thankful to partner with the Provider to meet the needs of the Patient.</p>
 			<p>If you have any questions or comments please feel free to <span class="bold">contact us.</span></p>
